2012-12-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20011126-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-921202-2.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c:
	  Enable some long long regression tests, that now seem to work even on 32-bit systems.

2012-12-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: small update about sdas390
	* sdas/asgb/gbpst.c: enable macros
	* sdas/asxxsrc/aslex.c (nxtline): also fix macro case
	* sdas/asxxsrc/asmcro.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/asxxxx.h: small step to ASxxxx v5
	* src/mcs51/gen.c(genJumpTab): use optimize.codeSpeed and options.acall_ajmp
	* src/SDCCast.c(createFunction): fixed warning
	* src/SDCCpeeph.c: cosmetics
	* support/regression/tests/bug3467508.c: suppress warnings
	* support/regression/tests/gcc-torture-execute-20050125-1.c: fixed warning
	* support/regression/tests/gcc-torture-execute-20050224-1.c: shortened test,
	  always perform ASSERT for correct statistics
	* support/regression/tests/gcc-torture-execute-20051104-1.c: added comments
	* support/regression/tests/gcc-torture-execute-doloop-2.c: always ASSERT
	* support/regression/tests/key.c,
	* support/regression/tests/long_asm_line.c,
	* support/regression/tests/macro.c: use at least one ASSERT

2012-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* Merged blocktree branch.

2012-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Handle emission of long long constants.
	  Emit error message for unknown sizes instead of failing silently.

2012-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c,
	* sdcc_vc.h.in: moved strto(u)ll macros and fixed warnings

2012-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitOverlay): fixed bug #3596899
	* support/regression/tests/gcc-tortue-execute-20021118-2.c: