@@ -13,28 +13,28 @@
 
 #define __func__      __FUNCTION__
 
-#define DIR_SEPARATOR_STRING		"\\"
-#define DIR_SEPARATOR_CHAR			'\\'
+#define DIR_SEPARATOR_STRING        "\\"
+#define DIR_SEPARATOR_CHAR          '\\'
 
-#define PREFIX						"\\sdcc"
-#define EXEC_PREFIX					"\\sdcc"
-#define BIN_PREFIX					"\\sdcc\\bin"
-#define DATADIR						"\\sdcc"
+#define PREFIX                      "\\sdcc"
+#define EXEC_PREFIX                 "\\sdcc"
+#define BIN_PREFIX                  "\\sdcc\\bin"
+#define DATADIR                     "\\sdcc"
 
-#define INCLUDE_DIR_SUFFIX			"\\include"
-#define LIB_DIR_SUFFIX				"\\lib"
-#define NON_FREE_INCLUDE_DIR_SUFFIX	"\\non-free\\include"
+#define INCLUDE_DIR_SUFFIX          "\\include"
+#define LIB_DIR_SUFFIX              "\\lib"
+#define NON_FREE_INCLUDE_DIR_SUFFIX "\\non-free\\include"
 #define NON_FREE_LIB_DIR_SUFFIX     "\\non-free\\lib"
 
-#define BIN2DATA_DIR				"\\.."
-#define PREFIX2BIN_DIR				"\\bin"
-#define PREFIX2DATA_DIR				""
-#define BINDIR PREFIX				"\\bin"
+#define BIN2DATA_DIR                "\\.."
+#define PREFIX2BIN_DIR              "\\bin"
+#define PREFIX2DATA_DIR             ""
+#define BINDIR PREFIX               "\\bin"
 
 /* environment variables */
-#define SDCC_DIR_NAME				"SDCC_HOME"
-#define SDCC_INCLUDE_NAME			"SDCC_INCLUDE"
-#define SDCC_LIB_NAME				"SDCC_LIB"
+#define SDCC_DIR_NAME               "SDCC_HOME"
+#define SDCC_INCLUDE_NAME           "SDCC_INCLUDE"
+#define SDCC_LIB_NAME               "SDCC_LIB"
 
 /* standard libraries */
 #define STD_LIB               "libsdcc"
